--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,294 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Management System</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-</body>
+    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
+
+    <!-- Vendor CSS Files -->
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.snow.css" rel="stylesheet" />
+    <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet" />
+
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header class="header fixed-top m-0">
+      <nav class="navbar navbar-expand-lg navbar-white bg-white p-0">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="d-flex align-items-center justify-content-between">
+            <a href="index.html" class="logo d-flex align-items-center">
+              <img src="assets/img/logo.png" alt="" />
+              <span class="d-none d-lg-block">Glorious</span>
+            </a>
+          </div>
+          <div
+            class="collapse navbar-collapse d-flex justify-content-end"
+            id="navbarTogglerDemo03"
+          >
+            <nav class="navbar navbar-expand-sm">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> Home </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> About US </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> Courses </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> Teachers </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"> Gallery </a>
+                </li>
+                <a href="login.html" class="btn btn-primary mx-2">Login</a>
+                <a href="register.html" class="btn btn-outline-primary mx-2"
+                  >Register</a
+                >
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- End Icons Navigation -->
+
+    <section class="">
+      <div class="justify-content-center">
+        <div class="position-relative w-100">
+          <img
+            src="./assets/img/School.jfif"
+            class="img-fluid w-100"
+            alt="School"
+            style="filter: blur(2px)"
+          />
+          <div
+            class="position-absolute text-center w-100 top-50 start-0 translate-middle-y"
+          >
+            <h1 class="text-white fw-bold">THE GLORIOUS FUTURE SCHOOL</h1>
+            <p class="text-white px-5">
+              Le Lorem Ipsum est simplement du faux texte employé dans la
+              composition et la mise en page avant impression. Le Lorem Ipsum
+              est le faux texte standard de l'imprimerie depuis les années 1500,
+              quand un imprimeur anonyme assembla ensemble des morceaux de texte
+              pour réaliser un livre spécimen de polices de texte.
+            </p>
+            <a class="btn btn-danger">Get Started</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Welcome -->
+      <div class="text-center justify-content-center">
+        <h2 class="fw-bold py-3">WELCOME TO UNIVERSITY</h2>
+        <hr class="w-25 floT" />
+        <p>
+          "Study Point is a international leader in teaching students to write
+          effectively,learn from each other and think for themselves"
+        </p>
+      </div>
+
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <!-- //Program -->
+
+          <div class="card col-md-4 mx-2" style="width: 18rem">
+            <!-- //  <img src="./assets/img/logo.png" class="card-img-top" alt="..." /> -->
+            <div class="card-body">
+              <h5 class="card-title">Program</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <!-- //Affordability -->
+          <div class="card col-md-4 mx-2" style="width: 18rem">
+            <!-- //  <img src="./assets/img/logo.png" class="card-img-top" alt="..." /> -->
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <!-- //Certification -->
+          <div class="card col-md-4 mx-2" style="width: 18rem">
+            <!-- //  <img src="./assets/img/logo.png" class="card-img-top" alt="..." /> -->
+            <div class="card-body">
+              <h5 class="card-title">Certification</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <!-- End Sales Card -->
+        </div>
+      </div>
+
+      <!-- //Teachers -->
+      <div class="text-center justify-content-center">
+        <h2 class="fw-bold py-3">Our Teachers</h2>
+        <hr class="w-25 floT" />
+        <p>"Find Online Courses"</p>
+        <div class="row d-flex justify-content-center">
+          <div class="card mb-3 col-auto mx-2" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="./assets/img/messages-1.jpg"
+                  class="img-fluid rounded-start"
+                  alt="Image"
+                  style="width: 200px; height: 256px"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <a href="#" class="btn btn-primary">View Profile</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3 col-auto mx-2" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="./assets/img/news-3.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                  style="width: 200px; height: 256px"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <p class="card-text">
+                    <a href="#" class="btn btn-primary">View Profile</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3 col-auto mx-2" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="./assets/img/news-3.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                  style="width: 200px; height: 256px"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <p class="card-text">
+                    <a href="#" class="btn btn-primary">View Profile</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3 col-auto mx-2" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="./assets/img/news-3.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                  style="width: 200px; height: 256px"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <p class="card-text">
+                    <a href="#" class="btn btn-primary">View Profile</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/chart.js/chart.min.js"></script>
+    <script src="assets/vendor/echarts/echarts.min.js"></script>
+    <script src="assets/vendor/quill/quill.min.js"></script>
+    <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
