--- a/static/index2.html
+++ b/static/index2.html
@@ -67,18 +67,131 @@
     <main class="px-3 dashboard">
         <section class="section">
             <div class="row">
-                <div class="position-relative w-100 m-0 p-0">
-                    <img src="assets/img/slides-1.jpg" class="d-block w-100" alt="...">
-                    <div class="position-absolute text-center text-white"
-                        style="transform: translate(-50%,-50%); top: 50%; left: 50%;">
-                        <h1>THE GLORIOUS FUTURE SCHOOL</h1>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
+                <div class="position-relative w-100 m-0 p-0 d-flex justify-content-center">
+                    <img src="assets/img/school.png" class="w-100 p-5" alt="...">
                 </div><!-- End Slides with captions -->
             </div>
             <div class="row">
+                <div class="text-center px-2">
+                    <h1>Welcome To <b>'THE GLORIOUS FUTURE SCHOOL (Rafiaqbad)'</b></h1>
+                    <p class="px-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                        took a galley of type and scrambled it to make a type specimen book. It has survived not only
+                        five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing software like Aldus PageMaker including
+                        versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                        took a galley of type and scrambled it to make a type specimen book. It has survived not only
+                        five centuries.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xxl-4 col-md-6">
+                    <div class="card info-card revenue-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Highest Position in Board</h5>
+                            <div class="d-flex align-items-center">
+                                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                    <i class="bi bi-people"></i>
+                                </div>
+                                <div class="ps-3">
+                                    <h6>1</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xxl-4 col-md-6">
+                    <div class="card info-card sales-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Highest Score</h5>
+                            <div class="d-flex align-items-center">
+                                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                    <i class="bi bi-journal-text"></i>
+                                </div>
+                                <div class="ps-3">
+                                    <h6>495 / 505</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xxl-4 col-md-6">
+                    <div class="card info-card customers-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Total Positions</h5>
+                            <div class="d-flex align-items-center">
+                                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                    <i class="bi bi-check-circle"></i>
+                                </div>
+                                <div class="ps-3">
+                                    <h6>151</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <h1 class="text-center">Principle</h1>
+                <div class="col-lg-4">
+                    <img class="w-100 rounded-circle" src="./assets/img/profile-img.jpg" alt="" loading="lazy">
+                </div>
+                <div class="col-lg-8">
+                    <div class="tab-content pt-2">
+                        <div class="tab-pane fade show active profile-overview">
+                            <h5 class="card-title">About</h5>
+                            <p class="small fst-italic">Sunt est soluta temporibus accusantium neque nam maiores cumque
+                                temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae
+                                quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</p>
+
+                            <h5 class="card-title">Details</h5>
+
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label ">Full Name</div>
+                                <div class="col-lg-9 col-md-8">Kevin Anderson</div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Company</div>
+                                <div class="col-lg-9 col-md-8">Lueilwitz, Wisoky and Leuschke</div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Job</div>
+                                <div class="col-lg-9 col-md-8">Web Designer</div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Country</div>
+                                <div class="col-lg-9 col-md-8">USA</div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Address</div>
+                                <div class="col-lg-9 col-md-8">A108 Adam Street, New York, NY 535022</div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Phone</div>
+                                <div class="col-lg-9 col-md-8">(436) 486-3538 x29071</div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 label">Email</div>
+                                <div class="col-lg-9 col-md-8">k.anderson@example.com</div>
+                            </div>
+
+                        </div>
+                    </div><!-- End Bordered Tabs -->
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12 p-3">
-                    <h1 class="text-center pb-3">News</h1>
+                    <h1 class="text-center text-uppercase pb-3">News</h1>
 
                     <div class="row news">
                         <div class="col-lg-1"></div>
@@ -161,16 +274,34 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-5">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" data-bs-target="#faqs-3" type="button"
                                         data-bs-toggle="collapse">
-                                        Provident beatae eveniet placeat est aperiam repellat adipisci?
+                                        Cumque voluptatem recusandae blanditiis?
                                     </button>
                                 </h2>
                                 <div id="faqs-3" class="accordion-collapse collapse" data-bs-parent="#faq-group">
+                                    <div class="accordion-body">
+                                        Ut quasi odit odio totam accusamus vero eius. Nostrum asperiores voluptatem
+                                        eos
+                                        nulla ab dolores est asperiores iure. Quo est quis praesentium aut maiores.
+                                        Corrupti
+                                        sed aut expedita fugit vero dolorem. Nemo rerum sapiente. A quaerat
+                                        dignissimos.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" data-bs-target="#faqs-4" type="button"
+                                        data-bs-toggle="collapse">
+                                        Provident beatae eveniet placeat est aperiam repellat adipisci?
+                                    </button>
+                                </h2>
+                                <div id="faqs-4" class="accordion-collapse collapse" data-bs-parent="#faq-group">
                                     <div class="accordion-body">
                                         In minus quia impedit est quas deserunt deserunt et. Nulla non quo dolores
                                         minima
@@ -181,12 +312,12 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
-                                    <button class="accordion-button collapsed" data-bs-target="#faqs-4" type="button"
+                                    <button class="accordion-button collapsed" data-bs-target="#faqs-5" type="button"
                                         data-bs-toggle="collapse">
                                         Minus aliquam modi id reprehenderit nihil?
                                     </button>
                                 </h2>
-                                <div id="faqs-4" class="accordion-collapse collapse" data-bs-parent="#faq-group">
+                                <div id="faqs-5" class="accordion-collapse collapse" data-bs-parent="#faq-group">
                                     <div class="accordion-body">
                                         Voluptates magni amet enim perspiciatis atque excepturi itaque est. Sit
                                         beatae
@@ -197,15 +328,35 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-1"></div>
                         </div>
                         <div class="col-lg-1"></div>
                     </div>
                 </div><!-- End F.A.Q Group 2 -->
             </div>
-            <div class="row">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-6 p-4 contact">
+            <!-- ======= Contact Section ======= -->
+            <div class="contact">
+                <div class="container">
+                    <div class="section-header text-center">
+                        <h2 class="text-uppercase">Contact Us</h2>
+                        <p>Ea vitae aspernatur deserunt voluptatem impedit deserunt magnam occaecati dssumenda quas ut
+                            ad dolores adipisci aliquam.</p>
+                    </div>
+                </div>
+                <div>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                        frameborder="0" allowfullscreen class="w-100" style="height: 400px"></iframe>
+                </div><!-- End Google Maps -->
+            </div><!-- End Contact Section -->
+            <div class="row py-4">
+                <div class="col-lg-4">
+                    <div class="card text-center">
+                        <h5 class="card-title">Get in touch</h5>
+                        <p class="card-body">Et id eius voluptates atque nihil voluptatem enim in tempore minima sit ad
+                            mollitia commodi minus.</p>
+                    </div>
+                </div>
+                <div class="col-lg-8 px-5 contact">
                     <h1 class="text-center pb-3 text-uppercase">We Like to Hear You</h1>
                     <form action="" method="post" class="php-email-form">
                         <div class="row gy-4">
@@ -238,12 +389,9 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-lg-3"></div>
             </div>
         </section>
     </main>
-
-
 
 
     <footer class="text-center text-lg-start text-white bg-dark">
@@ -267,12 +415,12 @@
 
                     <div class="mt-4">
                         <!-- Facebook -->
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i
+                        <a type="button" class="btn btn-floating btn-primary btn-lg"><i
                                 class="fa fa-facebook-f"></i></a>
                         <!-- Dribbble -->
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i class="fa fa-dribbble"></i></a>
+                        <a type="button" class="btn btn-floating btn-primary btn-lg"><i class="fa fa-dribbble"></i></a>
                         <!-- Twitter -->
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i class="fa fa-twitter"></i></a>
+                        <a type="button" class="btn btn-floating btn-primary btn-lg"><i class="fa fa-twitter"></i></a>
                     </div>
                 </div>
                 <!--Grid column-->
@@ -338,13 +486,13 @@
     </footer>
     <!-- End of .container -->
 
+
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 
     <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="assets/vendor/chart.js/chart.min.js"></script>
