--- a/static/principle/classes.html
+++ b/static/principle/classes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Attendance - Glorious Future School</title>
+    <title>Classses - Glorious Future School</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -266,21 +266,21 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link " href="dashboard.html">
+                <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="class.html">
+                <a class="nav-link" href="class.html">
                     <i class="fa-solid fa-landmark"></i>
                     <span>Classes</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="subject.html">
+                <a class="nav-link collapsed" href="subjects.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Subjects</span>
                 </a>
@@ -290,49 +290,54 @@
 
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="teacher.html">
+                <a class="nav-link collapsed" href="teachers.html">
                     <i class="fa-solid fa-person-chalkboard"></i>
                     <span>Teachers</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="clerk.html">
+                <a class="nav-link collapsed" href="clerks.html">
                     <i class="fa-solid fa-user-pen"></i>
                     <span>Clerks</span>
                 </a>
             </li>
-
             <li class="nav-item">
-                <a class="nav-link collapsed" href="assignment.html">
+                <a class="nav-link collapsed" href="timeTable.html">
+                  <i class="fa-solid fa-clock"></i>
+                  <span>Time Table</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="attendances.html">
+                    <i class="fa-solid fa-user-check"></i>
+                    <span>Attendances</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="assignments.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Assignments</span>
                 </a>
             </li>
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="attendance.html">
-                    <i class="fa-solid fa-user-check"></i>
-                    <span>Attendance</span>
-                </a>
-            </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="report.html">
+                <a class="nav-link collapsed" href="reports.html">
                     <i class="fa-regular fa-file-word"></i>
                     <span>Reports</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="fee.html">
+                <a class="nav-link collapsed" href="fees.html">
                     <i class="fa-solid fa-money-check-dollar"></i>
                     <span>Fees</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="salary.html">
+                <a class="nav-link collapsed" href="salaries.html">
                     <i class="fa-solid fa-money-check-dollar"></i>
                     <span>Salaries</span>
                 </a>
@@ -351,18 +356,94 @@
     <main id="main" class="main">
 
         <div class="pagetitle">
-            <h1>Attendance</h1>
+            <h1>Classes</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">Attendance</li>
+                    <li class="breadcrumb-item active">Classes</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
 
-        <section class="section classes">
-        </section>
+        <section class="section">
+            <div class="row">
+                <div class="col-lg-12">
 
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Our All Classes</h5>
+                            <p>For adding a new class into school click <a href="#">here.</a></p>
+                            <div class="table-responsive">
+
+                            <table class="table table-sm">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Position</th>
+                                        <th scope="col">Age</th>
+                                        <th scope="col">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Brandon Jacob</td>
+                                        <td>Designer</td>
+                                        <td>28</td>
+                                        <td>
+                                            <button class="btn btn-primary">Edit</button>
+                                            <button class="btn btn-danger">Delete</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">2</th>
+                                        <td>Bridie Kessler</td>
+                                        <td>Developer</td>
+                                        <td>35</td>
+                                        <td>
+                                            <button class="btn btn-primary">Edit</button>
+                                            <button class="btn btn-danger">Delete</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">3</th>
+                                        <td>Ashleigh Langosh</td>
+                                        <td>Finance</td>
+                                        <td>45</td>
+                                        <td>
+                                            <button class="btn btn-primary">Edit</button>
+                                            <button class="btn btn-danger">Delete</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">4</th>
+                                        <td>Angus Grady</td>
+                                        <td>HR</td>
+                                        <td>34</td>
+                                        <td>
+                                            <button class="btn btn-primary">Edit</button>
+                                            <button class="btn btn-danger">Delete</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">5</th>
+                                        <td>Raheem Lehner</td>
+                                        <td>Dynamic Division Officer</td>
+                                        <td>47</td>
+                                        <td>
+                                            <button class="btn btn-primary">Edit</button>
+                                            <button class="btn btn-danger">Delete</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main><!-- End #main -->
 
     <!-- ======= Footer ======= -->
