--- a/static/principle/dashboard.html
+++ b/static/principle/dashboard.html
@@ -273,14 +273,14 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="class.html">
+        <a class="nav-link collapsed" href="classes.html">
           <i class="fa-solid fa-landmark"></i>
           <span>Classes</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="subject.html">
+        <a class="nav-link collapsed" href="subjects.html">
           <i class="fa-solid fa-book"></i>
           <span>Subjects</span>
         </a>
@@ -290,49 +290,57 @@
 
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="teacher.html">
+        <a class="nav-link collapsed" href="teachers.html">
           <i class="fa-solid fa-person-chalkboard"></i>
           <span>Teachers</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="clerk.html">
+        <a class="nav-link collapsed" href="clerks.html">
           <i class="fa-solid fa-user-pen"></i>
           <span>Clerks</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="assignment.html">
+        <a class="nav-link collapsed" href="timeTable.html">
+          <i class="fa-solid fa-clock"></i>
+          <span>Time Table</span>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="attendances.html">
+          <i class="fa-solid fa-user-check"></i>
+          <span>Attendances</span>
+        </a>
+      </li>
+    
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="assignments.html">
           <i class="fa-solid fa-book"></i>
           <span>Assignments</span>
         </a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="attendance.html">
-          <i class="fa-solid fa-user-check"></i>
-          <span>Attendance</span>
-        </a>
-      </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="report.html">
+        <a class="nav-link collapsed" href="reports.html">
           <i class="fa-regular fa-file-word"></i>
           <span>Reports</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="fee.html">
+        <a class="nav-link collapsed" href="fees.html">
           <i class="fa-solid fa-money-check-dollar"></i>
           <span>Fees</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="salary.html">
+        <a class="nav-link collapsed" href="salaries.html">
           <i class="fa-solid fa-money-check-dollar"></i>
           <span>Salaries</span>
         </a>
@@ -370,22 +378,8 @@
             <!-- Sales Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card sales-card">
-
-                <div class="filter">
-                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
-                </div>
-
                 <div class="card-body">
-                  <h5 class="card-title">Total Teachers</h5>
+                  <h5 class="card-title">Current Teachers</h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -403,22 +397,8 @@
             <!-- Revenue Card -->
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card revenue-card">
-
-                <div class="filter">
-                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
-                </div>
-
                 <div class="card-body">
-                  <h5 class="card-title">Total Students</h5>
+                  <h5 class="card-title">Current Students</h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -434,28 +414,13 @@
 
             <!-- Customers Card -->
             <div class="col-xxl-4 col-xl-12">
-
               <div class="card info-card customers-card">
-
-                <div class="filter">
-                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                    <li class="dropdown-header text-start">
-                      <h6>Filter</h6>
-                    </li>
-
-                    <li><a class="dropdown-item" href="#">Today</a></li>
-                    <li><a class="dropdown-item" href="#">This Month</a></li>
-                    <li><a class="dropdown-item" href="#">This Year</a></li>
-                  </ul>
-                </div>
-
                 <div class="card-body">
-                  <h5 class="card-title">Total Pass out students</h5>
+                  <h5 class="card-title">Passed out students</h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-people"></i>
+                      <i class="bi bi-check2-all"></i>
                     </div>
                     <div class="ps-3">
                       <h6>1244</h6>
