--- a/static/principle/attendances.html
+++ b/static/principle/attendances.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Fees - Glorious Future School</title>
+    <title>Attendance - Glorious Future School</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -266,21 +266,21 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link " href="dashboard.html">
+                <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="class.html">
+                <a class="nav-link collapsed" href="classes.html">
                     <i class="fa-solid fa-landmark"></i>
                     <span>Classes</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="subject.html">
+                <a class="nav-link collapsed" href="subjects.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Subjects</span>
                 </a>
@@ -290,49 +290,54 @@
 
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="teacher.html">
+                <a class="nav-link collapsed" href="teachers.html">
                     <i class="fa-solid fa-person-chalkboard"></i>
                     <span>Teachers</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="clerk.html">
+                <a class="nav-link collapsed" href="clerks.html">
                     <i class="fa-solid fa-user-pen"></i>
                     <span>Clerks</span>
                 </a>
             </li>
-
             <li class="nav-item">
-                <a class="nav-link collapsed" href="assignment.html">
+                <a class="nav-link collapsed" href="timeTable.html">
+                  <i class="fa-solid fa-clock"></i>
+                  <span>Time Table</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="attendances.html">
+                      <i class="fa-solid fa-user-check"></i>
+                      <span>Attendances</span>
+                  </a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="assignments.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Assignments</span>
                 </a>
             </li>
 
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="attendance.html">
-                    <i class="fa-solid fa-user-check"></i>
-                    <span>Attendance</span>
-                </a>
-            </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="report.html">
+                <a class="nav-link collapsed" href="reports.html">
                     <i class="fa-regular fa-file-word"></i>
                     <span>Reports</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="fee.html">
+                <a class="nav-link collapsed" href="fees.html">
                     <i class="fa-solid fa-money-check-dollar"></i>
                     <span>Fees</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="salary.html">
+                <a class="nav-link collapsed" href="salaries.html">
                     <i class="fa-solid fa-money-check-dollar"></i>
                     <span>Salaries</span>
                 </a>
@@ -351,11 +356,11 @@
     <main id="main" class="main">
 
         <div class="pagetitle">
-            <h1>Fees</h1>
+            <h1>Attendances</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">Fees</li>
+                    <li class="breadcrumb-item active">Attendances</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
