--- a/static/principle/timeTable.html
+++ b/static/principle/timeTable.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Salary - Glorious Future School</title>
+    <title>Assignments - Glorious Future School</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -266,21 +266,21 @@
         <ul class="sidebar-nav" id="sidebar-nav">
 
             <li class="nav-item">
-                <a class="nav-link " href="dashboard.html">
+                <a class="nav-link collapsed" href="dashboard.html">
                     <i class="bi bi-grid"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="class.html">
+                <a class="nav-link collapsed" href="classes.html">
                     <i class="fa-solid fa-landmark"></i>
                     <span>Classes</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="subject.html">
+                <a class="nav-link collapsed" href="subjects.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Subjects</span>
                 </a>
@@ -290,49 +290,54 @@
 
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="teacher.html">
+                <a class="nav-link collapsed" href="teachers.html">
                     <i class="fa-solid fa-person-chalkboard"></i>
                     <span>Teachers</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="clerk.html">
+                <a class="nav-link collapsed" href="clerks.html">
                     <i class="fa-solid fa-user-pen"></i>
                     <span>Clerks</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="timeTable.html">
+                    <i class="fa-solid fa-clock"></i>
+                    <span>Time Table</span>
+                </a>
+            </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="assignment.html">
+                <a class="nav-link collapsed" href="attendances.html">
+                    <i class="fa-solid fa-user-check"></i>
+                    <span>Attendances</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="assignments.html">
                     <i class="fa-solid fa-book"></i>
                     <span>Assignments</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="attendance.html">
-                    <i class="fa-solid fa-user-check"></i>
-                    <span>Attendance</span>
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="report.html">
+                <a class="nav-link collapsed" href="reports.html">
                     <i class="fa-regular fa-file-word"></i>
                     <span>Reports</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="fee.html">
+                <a class="nav-link collapsed" href="fees.html">
                     <i class="fa-solid fa-money-check-dollar"></i>
                     <span>Fees</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" href="salary.html">
+                <a class="nav-link collapsed" href="salaries.html">
                     <i class="fa-solid fa-money-check-dollar"></i>
                     <span>Salaries</span>
                 </a>
@@ -351,16 +356,103 @@
     <main id="main" class="main">
 
         <div class="pagetitle">
-            <h1>Salary</h1>
+            <h1>Time Table</h1>
             <nav>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">Salary</li>
+                    <li class="breadcrumb-item active">Time Table</li>
                 </ol>
             </nav>
         </div><!-- End Page Title -->
 
-        <section class="section classes">
+        <section class="section">
+            <!-- Time table assessments bootstrap design -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class="card-title">Time Table of School</h4>
+                                <!-- Time table in bootstrap -->
+                                <div class="table-responsive">
+                                    <table class="table table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Day</th>
+                                                <th scope="col">Period 1</th>
+                                                <th scope="col">Period 2</th>
+                                                <th scope="col">Period 3</th>
+                                                <th scope="col">Period 4</th>
+                                                <th scope="col">Period 5</th>
+                                                <th scope="col">Period 6</th>
+                                                <th scope="col">Period 7</th>
+                                                <th scope="col">Period 8</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row">Monday</th>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                                <td>History</td>
+                                                <td>Geography</td>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Tuesday</th>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                                <td>History</td>
+                                                <td>Geography</td>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Wednesday</th>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                                <td>History</td>
+                                                <td>Geography</td>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Thursday</th>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                                <td>History</td>
+                                                <td>Geography</td>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Friday</th>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                                <td>History</td>
+                                                <td>Geography</td>
+                                                <td>Maths</td>
+                                                <td>English</td>
+                                                <td>Science</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main><!-- End #main -->
